--- a/tulen-demo/tulen-demo.cabal
+++ b/tulen-demo/tulen-demo.cabal
@@ -16,7 +16,9 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
+  build-depends:
+      base             >= 4.7     && < 5
+    , tulen-core       >= 0.1     && < 0.2
   default-language:    Haskell2010
 
 executable tulen-demo
