--- a/stack.yaml
+++ b/stack.yaml
@@ -46,6 +46,16 @@ packages:
 - location:
     git: https://github.com/Teaspot-Studio/Urho3D-Haskell.git
     commit: e375defd33af6486f3afe04a9365a49ea34fd4f4
+  subdirs:
+    - '.'
+    - 'urho3d-bindgen'
+- location:
+    git: https://github.com/Teaspot-Studio/inline-c.git
+    commit: 29fdcec7292bc1fe0859548de42608a5a243df10
+  extra-dep: true
+- location:
+    git: https://github.com/Teaspot-Studio/inline-c-cpp.git
+    commit: 68ec7290766c4f7997361d4e74e6ad4c15dd26b6
   extra-dep: true
 
 # Dependency packages to be pulled from upstream that are not in the resolver
