--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -20,6 +20,7 @@ library
   build-depends:
       base             >= 4.7     && < 5
     , tulen-api        >= 0.1     && < 0.2
+    , urho3d-haskell   >= 0.1     && < 0.2
   default-language:    Haskell2010
 
 source-repository head
