--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -19,9 +19,14 @@ library
     Game.Tulen.Core
   build-depends:
       base             >= 4.7     && < 5
+    , StateVar         >= 1.1     && < 1.2
     , tulen-api        >= 0.1     && < 0.2
     , urho3d-haskell   >= 0.1     && < 0.2
   default-language:    Haskell2010
+  default-extensions:
+    OverloadedStrings
+    RecordWildCards
+    ScopedTypeVariables
 
 source-repository head
   type:     git
