--- a/tulen-demo/tulen-demo.cabal
+++ b/tulen-demo/tulen-demo.cabal
@@ -15,7 +15,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:
+    Game.Tulen.Demo
   build-depends:
       base             >= 4.7     && < 5
     , tulen-core       >= 0.1     && < 0.2
