--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:
     Game.Tulen.Core
+    Game.Tulen.Internal.Core
   build-depends:
       base             >= 4.7     && < 5
     , StateVar         >= 1.1     && < 1.2
