--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -18,11 +18,16 @@ library
   exposed-modules:
     Game.Tulen.Core
     Game.Tulen.Internal.Core
+    Game.Tulen.Internal.Landscape
   build-depends:
       base             >= 4.7     && < 5
+    , containers       >= 0.5     && < 0.6
+    , linear           >= 1.20    && < 1.21
+    , repa             >= 3.4     && < 3.5
     , StateVar         >= 1.1     && < 1.2
     , tulen-api        >= 0.1     && < 0.2
     , urho3d-haskell   >= 0.1     && < 0.2
+    , vector           >= 0.11    && < 0.12
   default-language:    Haskell2010
   default-extensions:
     OverloadedStrings
