--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -32,6 +32,7 @@ library
     , vector           >= 0.11    && < 0.12
   default-language:    Haskell2010
   default-extensions:
+    OverloadedLists
     OverloadedStrings
     RecordWildCards
     ScopedTypeVariables
