--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -24,6 +24,7 @@ library
   build-depends:
       base             >= 4.7     && < 5
     , containers       >= 0.5     && < 0.6
+    , lens             >= 4.15    && < 4.16
     , linear           >= 1.20    && < 1.21
     , repa             >= 3.4     && < 3.5
     , StateVar         >= 1.1     && < 1.2
