--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -34,6 +34,7 @@ library
   default-language:    Haskell2010
   default-extensions:
     BangPatterns
+    FlexibleContexts
     OverloadedLists
     OverloadedStrings
     RecordWildCards
