--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -17,6 +17,9 @@ data-files:
   Data/Shaders/GLSL/*.glsl
   Data/Shaders/HLSL/*.hlsl
   Data/Techniques/*.xml
+  Data/Textures/*.xml
+  Data/Textures/Barrens/*.png
+  Data/Textures/Barrens/LICENSE 
 
 library
   hs-source-dirs:      src
