--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -27,8 +27,10 @@ library
   exposed-modules:
     Game.Tulen.Core
     Game.Tulen.Internal.Core
+    Game.Tulen.Internal.Image
     Game.Tulen.Internal.Landscape
     Game.Tulen.Internal.Landscape.Mesh
+    Game.Tulen.Internal.Landscape.Texture
     Game.Tulen.Internal.Landscape.Types
   other-modules:
     Paths_tulen_core
@@ -43,14 +45,18 @@ library
     , tulen-api        >= 0.1     && < 0.2
     , urho3d-haskell   >= 0.1     && < 0.2
     , vector           >= 0.11    && < 0.12
+    , vector-th-unbox  >= 0.2     && < 0.3
+    , primitive        >= 0.6     && < 0.7
   default-language:    Haskell2010
   default-extensions:
     BangPatterns
     FlexibleContexts
+    MultiParamTypeClasses
     OverloadedLists
     OverloadedStrings
     RecordWildCards
     ScopedTypeVariables
+    TypeFamilies
 
 source-repository head
   type:     git
