--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -53,6 +53,8 @@ library
   default-language:    Haskell2010
   default-extensions:
     BangPatterns
+    DeriveFunctor
+    DeriveGeneric
     FlexibleContexts
     MultiParamTypeClasses
     OverloadedLists
