--- a/tulen-api/tulen-api.cabal
+++ b/tulen-api/tulen-api.cabal
@@ -17,8 +17,22 @@ library
   hs-source-dirs:      src
   exposed-modules:
     Game.Tulen.API
-  build-depends:       base >= 4.7 && < 5
+    Game.Tulen.API.Camera
+    Game.Tulen.API.Landscape
+    Game.Tulen.API.Math
+    Game.Tulen.API.Mouse
+    Game.Tulen.API.Resource
+  build-depends:
+      base                    >= 4.7        && < 5
+    , reflex                  >= 0.5        && < 0.6
+    , reflex-host             >= 0.3        && < 0.4
   default-language:    Haskell2010
+  default-extensions:
+    ConstraintKinds
+    DeriveFunctor
+    DeriveGeneric
+    MultiParamTypeClasses
+    TypeFamilies
 
 source-repository head
   type:     git
