--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -26,26 +26,42 @@ library
   hs-source-dirs:      src
   exposed-modules:
     Game.Tulen.Core
+    Game.Tulen.Internal.API
+    Game.Tulen.Internal.API.Camera
+    Game.Tulen.Internal.API.Helpers
+    Game.Tulen.Internal.API.Math
+    Game.Tulen.Internal.API.Mouse
     Game.Tulen.Internal.Camera
+    Game.Tulen.Internal.Camera.Types
     Game.Tulen.Internal.Core
+    Game.Tulen.Internal.Core.Types
+    Game.Tulen.Internal.ExternalRef
     Game.Tulen.Internal.Image
     Game.Tulen.Internal.Landscape
     Game.Tulen.Internal.Landscape.Mesh
     Game.Tulen.Internal.Landscape.Texture
     Game.Tulen.Internal.Landscape.Types
+    Game.Tulen.Internal.Monad
     Game.Tulen.Internal.Utils
   other-modules:
     Paths_tulen_core
   build-depends:
       base             >= 4.7     && < 5
     , containers       >= 0.5     && < 0.6
+    , deepseq          >= 1.4     && < 1.5
     , directory        >= 1.3     && < 1.4
     , exceptions       >= 0.8     && < 0.9
     , lens             >= 4.15    && < 4.16
     , linear           >= 1.20    && < 1.21
+    , mtl              >= 2.2     && < 2.3
     , primitive        >= 0.6     && < 0.7
+    , reducers         >= 3.12    && < 3.13
+    , reflex           >= 0.5     && < 0.6
+    , reflex-host      >= 0.3     && < 0.4
     , repa             >= 3.4     && < 3.5
     , StateVar         >= 1.1     && < 1.2
+    , stateWriter      >= 0.2     && < 0.3
+    , stm              >= 2.4     && < 2.5
     , tulen-api        >= 0.1     && < 0.2
     , urho3d-haskell   >= 0.1     && < 0.2
     , vector           >= 0.11    && < 0.12
@@ -56,12 +72,18 @@ library
     DeriveFunctor
     DeriveGeneric
     FlexibleContexts
+    FlexibleInstances
+    GeneralizedNewtypeDeriving
     MultiParamTypeClasses
     OverloadedLists
     OverloadedStrings
+    RankNTypes
     RecordWildCards
     ScopedTypeVariables
+    StandaloneDeriving
     TypeFamilies
+    TypeSynonymInstances
+    UndecidableInstances
 
 source-repository head
   type:     git
