--- a/tulen-api/tulen-api.cabal
+++ b/tulen-api/tulen-api.cabal
@@ -24,13 +24,17 @@ library
     Game.Tulen.API.Resource
   build-depends:
       base                    >= 4.7        && < 5
+    , containers              >= 0.5        && < 0.6
+    , dependent-map           >= 0.2        && < 0.3
     , reflex                  >= 0.5        && < 0.6
     , reflex-host             >= 0.3        && < 0.4
+    , these                   >= 0.7        && < 0.8
   default-language:    Haskell2010
   default-extensions:
     ConstraintKinds
     DeriveFunctor
     DeriveGeneric
+    FunctionalDependencies
     MultiParamTypeClasses
     TypeFamilies
 
