--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -64,6 +64,7 @@ library
     , stateWriter      >= 0.2     && < 0.3
     , stm              >= 2.4     && < 2.5
     , tulen-api        >= 0.1     && < 0.2
+    , urho3d-bindgen   >= 0.1     && < 0.2
     , urho3d-haskell   >= 0.1     && < 0.2
     , vector           >= 0.11    && < 0.12
     , vector-th-unbox  >= 0.2     && < 0.3
