--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -83,6 +83,7 @@ library
     RecordWildCards
     ScopedTypeVariables
     StandaloneDeriving
+    TupleSections
     TypeFamilies
     TypeSynonymInstances
     UndecidableInstances
