--- a/tulen-core/tulen-core.cabal
+++ b/tulen-core/tulen-core.cabal
@@ -29,9 +29,11 @@ library
     Game.Tulen.Internal.API
     Game.Tulen.Internal.API.Camera
     Game.Tulen.Internal.API.Helpers
+    Game.Tulen.Internal.API.KeyBoard
     Game.Tulen.Internal.API.Landscape
     Game.Tulen.Internal.API.Math
     Game.Tulen.Internal.API.Mouse
+    Game.Tulen.Internal.API.UI.Element
     Game.Tulen.Internal.Camera
     Game.Tulen.Internal.Camera.Types
     Game.Tulen.Internal.Core
@@ -48,6 +50,7 @@ library
     Paths_tulen_core
   build-depends:
       base             >= 4.7     && < 5
+    , bimap            >= 0.3     && < 0.4
     , containers       >= 0.5     && < 0.6
     , deepseq          >= 1.4     && < 1.5
     , directory        >= 1.3     && < 1.4
@@ -66,11 +69,12 @@ library
     , tulen-api        >= 0.1     && < 0.2
     , urho3d-bindgen   >= 0.1     && < 0.2
     , urho3d-haskell   >= 0.1     && < 0.2
-    , vector           >= 0.11    && < 0.12
+    , vector           >= 0.11    && < 0.13
     , vector-th-unbox  >= 0.2     && < 0.3
   default-language:    Haskell2010
   default-extensions:
     BangPatterns
+    DeriveDataTypeable
     DeriveFunctor
     DeriveGeneric
     FlexibleContexts
